# drain

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  bootstrap.sh  collector.c  drainfile
cmake/: clang-tidy.cmake  cppcheck.cmake
src/: actions.c  actions.h  client.c  client.h  cmd_attach.c  cmd_attach.h  cmd_server.c  cmd_server.h  commands.c  commands.h  config.c  config.h  drain.c  drainfile.c  drainfile.h  error.c  error.h  helpers.c  helpers.h  process.c  process.h  process_list.c  process_list.h  server.c  server.h  types.h
tests/: drainfile  process_mock.c  process_mock.h  test_actions.c  test_config.c  test_drainfile.c  test_helpers.c  test_process.c  test_process_list.c  test_server_client.c  test_system.sh  tests.h
